--- a/03-third-party-auth/01-start/orbit-app/.env.local
+++ b/03-third-party-auth/01-start/orbit-app/.env.local
@@ -1,1 +1,4 @@
 REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_AUTH0_DOMAIN=dev-juandavid1.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=R2LIZsGcjcjmqBnus0mVPJ5f7gMPEEBS
+REACT_APP_AUTH0_AUDIENCE=https://api.orbit/
